<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuessMyFigure...</string>
    <string name="msg_guesser_top">My figure is between %% and %%</string>
    <string name="edit_message">Guess!</string>
    <string name="button_tip">I guess</string>
    <string name="button_newguess">Again!</string>
    <string name="msg_less_than">less then my figure</string>
    <string name="more">More</string>
    <string name="action_quit">Quit</string>
    <string name="action_compose">Create</string>
    <string name="guesser">Guess my figure</string>
    <string name="rounding">Rounding</string>
    <string name="msg_more_than">greater then my figure</string>
    <string name="msg_found">Yesss! You got it!!! Great job!</string>
    <string name="msg_found_a_new">OK, I\'ve found a new. Try!</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="msg_rounder_top">How much is %1s rounded?</string>
    <string name="msg_tip_failed">unfortunately not correct, try again!</string>
    <string name="msg_tip_success">Yes! RIGHT!</string>
    <string name="rounder_button_new_tip">Again</string>
    <string name="action_multiplication">Multiplication</string>
    <string name="action_settings">Settings</string>
    <string name="multiplication">Multiplication</string>
    <string name="msg_how_much_is_result">How much is the result?</string>
    <string name="addition">Addition</string>
	<string name="guesser_pref_min_val_title">Min value</string>
	<string name="guesser_pref_min_val_summary">The lowest value to be guessed</string>
	<string name="guesser_pref_max_val_title">Max value</string>
	<string name="guesser_pref_max_val_summary">The highest value to be guessed</string>
	<string name="guesser_pref_min_error">The minimum should be less then the maximum value!</string>	
	<string name="guesser_pref_max_error">The maximum should be greater then the minimum value!</string>	
	
</resources>
