<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:hint="@string/edit_message"
        android:inputType="numberSigned"
        android:singleLine="true" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:onClick="newGuess"
        android:text="@string/button_newguess"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/view_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_message"
        android:layout_marginTop="52dp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:textColor="#FFFF00"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/TipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_message"
        android:layout_centerHorizontal="true"
        android:onClick="sendTip"
        android:text="@string/button_tip"
        android:textSize="20sp" />

</RelativeLayout>
